--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
 		<na2.version>0.2.1</na2.version>
 		<spring.boot.version>1.5.3.RELEASE</spring.boot.version>
 		<spring.web.version>4.3.8.RELEASE</spring.web.version>
-		<jackson.version>2.8.8</jackson.version>
+		<jackson.version>[2.8.11.3,)</jackson.version>
 		<httpclient.version>4.5.3</httpclient.version>
 		<httpcore.version>4.4.6</httpcore.version>
 	</properties>
